YouVidaPrototypes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youvidagui-service
                port:
                  number: 80
          - path: /api/tag
            pathType: Prefix
            backend:
              service:
                name: tagapi-service
                port:
                  number: 80
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: postsapi-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: userprofileapi-service
                port:
                  number: 80
